--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.16",
     "next": "15.0.3",
     "next-video": "^1.3.3",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.1.15",
     "zustand": "^5.0.1"
